--- a/EbayProject/src/main/java/com/ebay/qa/config/config.properties
+++ b/EbayProject/src/main/java/com/ebay/qa/config/config.properties
@@ -2,3 +2,9 @@ url=https://www.ebay.com/
 browser=chrome
 username=sush.rinwa@gmail.com
 password=sushila231082
+
+
+firstname=admin
+lastname=test
+email=sush.rinwa@gmail.com
+registerPass=test@123
