--- a/EbayProject/pom.xml
+++ b/EbayProject/pom.xml
@@ -26,7 +26,7 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.14.3</version>
-    <scope>complile</scope>
+    <scope>compile</scope>
 </dependency>
 
 <dependency>
@@ -80,6 +80,21 @@
     <groupId>org.apache.poi</groupId>
     <artifactId>poi-excelant</artifactId>
     <version>4.1.0</version>
+</dependency>
+<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.2</version>
+</dependency>
+<dependency>
+        <groupId>net.sourceforge.javacsv</groupId>
+        <artifactId>javacsv</artifactId>
+        <version>2.0</version>
+</dependency>
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
 </dependency>
   </dependencies>
 </project>
