--- a/EbayProject/pom.xml
+++ b/EbayProject/pom.xml
@@ -1,6 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
+
+    
 
   <groupId>EbayProject</groupId>
   <artifactId>EbayProject</artifactId>
@@ -11,6 +14,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+  
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -97,4 +101,20 @@
     <version>2.6</version>
 </dependency>
   </dependencies>
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.6.1</version>
+            <configuration>
+            <verbose>true</verbose>
+                      <fork>true</fork>
+                      <executable>${java.home}</executable>
+                <source>1.6</source>
+                <target>1.6</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
